test/tests/stages/18_structures/invalid_struct_tags/file_scope_var_type_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[4]:
  struct
  identifier(s)
  identifier(var)
  ;
